Applied fix for header title/strapline spacing across devices

--- a/src/styles/modules/footer.less
+++ b/src/styles/modules/footer.less
@@ -94,12 +94,3 @@ footer {
         }
     }
 }
-
-// Adjust jobtitle when beneath name
-@media screen and (max-width: 657px) {
-    header {
-        .title .jobtitle {
-            margin: 8px 0px 10px 0px;
-        }
-    }
-}
