--- a/src/styles/modules/header.less
+++ b/src/styles/modules/header.less
@@ -85,24 +85,23 @@ header {
     display: none;
 }
 
-// Tablet
-@media screen and (max-width: @screen-sm-max) {
+@media screen and (max-width: @screen-sm-max) { // Tablet + Phone
     header {
         .title .myname {
             font-size: 52px;
         }
         .title .jobtitle {
-            font-size: 24px;
-            margin-top: 30px;
+            font-size: 22px;
+            float: right;
         }
         .title .strapline {
             font-size: 16px;
+            margin: 10px 0px 0px 2px;
         }
     }
 }
 
-// Phone
-@media screen and (max-width: @screen-xs-max) {
+@media screen and (max-width: @screen-xs-max) { // Phone
     header {
         .title {
             display: none;
@@ -112,6 +111,8 @@ header {
             }
             .jobtitle {
                 line-height: 26px;
+                float: left;
+                clear: both;
             }
             .strapline {
                 font-size: 16px;
@@ -145,6 +146,32 @@ header {
         }
         header .myname-mobile {
             display: none;
+        }
+    }
+}
+
+@media screen and (min-width: 680px) and (max-width: @screen-xs-max) { // Phone Landscape (not strict)
+    header {
+        .title .jobtitle {
+            margin-top: 18px;
+            margin-left: 14px;
+            float: left;
+            clear: none !important;
+        }
+        .title .strapline {
+            padding-top: 6px;
+        }
+    }
+}
+
+@media screen and (max-width: 679px) { // Phone Portrait (not strict)
+    header {
+        .title .jobtitle {
+            font-size: 20px;
+            margin-top: 6px;
+        }
+        .title .strapline {
+            padding-top: 6px;
         }
     }
 }
